--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,7 +1,7 @@
 {
     "development": {
         "PORT": 3000,
-        "MONGODB_URI": "mongodb://localhost:27017/meanz"
+        "MONGODB_URI": "mongodb://mongo:27017/meanz"
     },
     "production": {
         "PORT": 80,
