--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,4 +1,7 @@
-FROM node:18.13.0-alpine
+FROM --platform=linux/amd64 node:18.13.0-alpine
 
+WORKDIR /usr/app
+COPY ./ /usr/app
 RUN npm install
-CMD ["npm", "start"]
+ENTRYPOINT ["npm", "start"]
+EXPOSE 80
